fixed overlapping footer-bottom

--- a/src/app/shared/shared/footer-bottom/footer-bottom.component.css
+++ b/src/app/shared/shared/footer-bottom/footer-bottom.component.css
@@ -1,6 +1,6 @@
 .footer-bottom-section {
-    padding-left: 4.8rem;
-    padding-right: 4.8rem;
+    /* padding-left: 4.8rem;
+    padding-right: 4.8rem; */
     background:#595957;
     position: relative;
 }
@@ -11,15 +11,15 @@
     color: #474747;
 }
 .footer-bottom {
-    text-align: center;
-    padding: 10px 0;
+    /* text-align: center; */
+    padding: 40px 0;
 }
 
 .footer-bottom .logo-copyright-section {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 2.4rem 0 2.8rem;
+    /* padding: 2.4rem 0 2.8rem; */
 }
 
 .footer-copyright {
@@ -27,7 +27,8 @@
     font-size: 16px;
 }
 
-.footer-right {
+.footer-right,
+.copyright {
     display: flex;
     align-items: center;
 }
@@ -35,10 +36,12 @@
 .nav-right-links {
     position: relative;
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
-.nav-link {
+/* .nav-link {
     display: block;
     padding: .5rem 3rem;
-}
+} */
